feat: added chat functionalities
